--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.2.3
 Django==3.0.4
+django-discover-runner==1.0
 django-rest-framework==0.1.0
+django-role-permissions==2.2.1
 djangorestframework==3.11.0
+Pillow==7.1.1
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
