--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.6.0
 Django==3.0.4
 django-allauth==0.41.0
 django-discover-runner==1.0
+django-environ==0.4.5
 django-rest-framework==0.1.0
 django-role-permissions==2.2.1
 djangorestframework==3.11.0
