--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME=
+DB_NAME=examkhojo
 DB_PASSWORD=
-DB_PORT=
-DB_HOST=
-DB_USER=
+DB_PORT=5432
+DB_HOST=localhost
+DB_USER=chayan007
 
 DJANGO_SETTINGS_MODULE=
