--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ django-environ==0.4.5
 django-rest-framework==0.1.0
 django-role-permissions==2.2.1
 djangorestframework==3.11.0
+environ==1.0
 idna==2.9
 oauthlib==3.1.0
 Pillow==7.1.1
+psycopg2-binary==2.8.5
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.23.0
