--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,21 @@ asgiref==3.2.3
 certifi==2020.4.5.1
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.0.4
 django-allauth==0.41.0
 django-discover-runner==1.0
 django-environ==0.4.5
+django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-role-permissions==2.2.1
 djangorestframework==3.11.0
 environ==1.0
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
 Pillow==7.1.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 python3-openid==3.1.0
 pytz==2019.3
@@ -21,3 +25,4 @@ requests-oauthlib==1.3.0
 six==1.14.0
 sqlparse==0.3.1
 urllib3==1.25.8
+whitenoise==5.1.0
